# repo-context-analyzer

./: .gitignore  README.md  dependency_reader.py  image_hierarchy.py  image_info.py  language_ident.py  parse_images.py  pyproject.toml  regex copy.py  stig.json  stig_parser.py  syft_check.py  syft_run.py
.github/workflows/: ci-pipeline.yml
github/workflows/: ci-pipeline.yml
